plugins {
    id 'java-gradle-plugin'
    id 'groovy'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
    options.release = 23
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}

dependencies {
    implementation gradleApi()
    implementation localGroovy()
}

gradlePlugin {
    plugins {
        projectHub {
            id = 'com.projecthub.gradle'
            implementationClass = 'com.projecthub.gradle.ProjectHubPlugin'
        }
    }
}